// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputWithEllipsizeMode component change text value 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#F5F5F6",
          "borderColor": "#F5F5F6",
          "borderRadius": 12,
          "borderWidth": 1,
          "color": "#0E1216",
          "fontFamily": "PlusJakartaSans-Regular",
          "fontSize": 16,
          "height": 47,
          "lineHeight": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 3,
        },
        false,
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        [
          {
            "backgroundColor": "#F5F5F6",
            "borderColor": "#F5F5F6",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#0E1216",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "height": 47,
            "lineHeight": 20,
            "paddingHorizontal": 15,
            "paddingVertical": 3,
          },
          undefined,
          false,
          undefined,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A1A1A5"
      selectionColor="#FF502E"
      style={
        [
          {
            "color": "#0E1216",
            "flex": 1,
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
            {
              "color": "transparent",
            },
          ],
        ]
      }
      testID="nativeInputText"
      value="test"
    />
  </View>
  <View
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1}
      numberOfLines={1}
      onPress={[Function]}
      style={
        [
          {
            "color": "#0E1216",
            "fontFamily": "PlusJakartaSans-Regular",
          },
          [
            {
              "backgroundColor": "#F5F5F6",
              "borderColor": "#F5F5F6",
              "borderRadius": 12,
              "borderWidth": 1,
              "color": "#0E1216",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 16,
              "height": 47,
              "lineHeight": 20,
              "paddingHorizontal": 15,
              "paddingVertical": 3,
            },
            undefined,
            undefined,
            {
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": undefined,
              "flex": 0,
              "height": "auto",
              "opacity": 1,
              "padding": 0,
            },
          ],
        ]
      }
      value="test"
    >
      test
    </Text>
  </View>
</View>
`;

exports[`TextInputWithEllipsizeMode component with value 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#F5F5F6",
          "borderColor": "#F5F5F6",
          "borderRadius": 12,
          "borderWidth": 1,
          "color": "#0E1216",
          "fontFamily": "PlusJakartaSans-Regular",
          "fontSize": 16,
          "height": 47,
          "lineHeight": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 3,
        },
        false,
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        [
          {
            "backgroundColor": "#F5F5F6",
            "borderColor": "#F5F5F6",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#0E1216",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "height": 47,
            "lineHeight": 20,
            "paddingHorizontal": 15,
            "paddingVertical": 3,
          },
          undefined,
          false,
          undefined,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A1A1A5"
      selectionColor="#FF502E"
      style={
        [
          {
            "color": "#0E1216",
            "flex": 1,
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
            {
              "color": "transparent",
            },
          ],
        ]
      }
      testID="nativeInputText"
      value="test"
    />
  </View>
  <View
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1}
      numberOfLines={1}
      onPress={[Function]}
      style={
        [
          {
            "color": "#0E1216",
            "fontFamily": "PlusJakartaSans-Regular",
          },
          [
            {
              "backgroundColor": "#F5F5F6",
              "borderColor": "#F5F5F6",
              "borderRadius": 12,
              "borderWidth": 1,
              "color": "#0E1216",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 16,
              "height": 47,
              "lineHeight": 20,
              "paddingHorizontal": 15,
              "paddingVertical": 3,
            },
            undefined,
            undefined,
            {
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": undefined,
              "flex": 0,
              "height": "auto",
              "opacity": 1,
              "padding": 0,
            },
          ],
        ]
      }
      value="test"
    >
      test
    </Text>
  </View>
</View>
`;

exports[`TextInputWithEllipsizeMode empty component 1`] = `
<View>
  <View
    style={
      [
        {
          "backgroundColor": "#F5F5F6",
          "borderColor": "#F5F5F6",
          "borderRadius": 12,
          "borderWidth": 1,
          "color": "#0E1216",
          "fontFamily": "PlusJakartaSans-Regular",
          "fontSize": 16,
          "height": 47,
          "lineHeight": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 3,
        },
        false,
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        [
          {
            "backgroundColor": "#F5F5F6",
            "borderColor": "#F5F5F6",
            "borderRadius": 12,
            "borderWidth": 1,
            "color": "#0E1216",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 16,
            "height": 47,
            "lineHeight": 20,
            "paddingHorizontal": 15,
            "paddingVertical": 3,
          },
          undefined,
          false,
          undefined,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A1A1A5"
      selectionColor="#FF502E"
      style={
        [
          {
            "color": "#0E1216",
            "flex": 1,
          },
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
            {
              "color": "transparent",
            },
          ],
        ]
      }
      testID="nativeInputText"
    />
  </View>
  <View
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      maxFontSizeMultiplier={1}
      numberOfLines={1}
      onPress={[Function]}
      style={
        [
          {
            "color": "#0E1216",
            "fontFamily": "PlusJakartaSans-Regular",
          },
          [
            {
              "backgroundColor": "#F5F5F6",
              "borderColor": "#F5F5F6",
              "borderRadius": 12,
              "borderWidth": 1,
              "color": "#0E1216",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 16,
              "height": 47,
              "lineHeight": 20,
              "paddingHorizontal": 15,
              "paddingVertical": 3,
            },
            undefined,
            undefined,
            {
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#A1A1A5",
              "flex": 0,
              "height": "auto",
              "opacity": 1,
              "padding": 0,
            },
          ],
        ]
      }
    />
  </View>
</View>
`;
